Hoàn thiện order, cần nâng cấp để bổ sung địa chỉ và thanh toán rõ ràng hơn